# ControlTower

./: CMakeLists.txt  README.md  connecttogazebo.cpp  connecttogazebo.h  connecttogazebo.ui  flyform.cpp  flyform.h  flyform.ui  flyui.cpp  flyui.h  flyui.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mavsdkstation.cpp  mavsdksystemconnector.cpp  mavsdksystemconnector.h  mavsdkvehicleconnection.cpp  mavsdkvehicleconnection.h  planui.cpp  planui.h  planui.ui  resources.qrc  routeplannermodule.cpp  routeplannermodule.h  tracemodule.cpp  tracemodule.h  traceui.h  ubloxbasestationui.h  ubloxbasestationui.ui  waypointfollowerstation.cpp  waypointfollowerstation.h
doc/: Building-for-Windows.md
